plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

// QueryDSL 설정
def querydslVersion = '5.1.0'
def generatedDir = 'src/main/generated'

group = 'swyp12.team9'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'

	// Valid 검증
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Spring AI
	implementation platform("org.springframework.ai:spring-ai-bom:1.1.2")
	implementation 'org.springframework.ai:spring-ai-starter-model-openai'
	implementation 'org.springframework.ai:spring-ai-starter-vector-store-elasticsearch'

	// AWS SDK for S3 (NCP Object Storage)
	implementation 'software.amazon.awssdk:s3:2.20.26'
	implementation 'software.amazon.awssdk:auth:2.20.26'

	// Apache HttpComponents (RestClient용)
	implementation 'org.apache.httpcomponents.client5:httpclient5'

	// QueryDSL
	implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

// QueryDSL Q 클래스 생성 경로 설정
sourceSets {
	main.java.srcDirs += [generatedDir]
}

// QueryDSL 컴파일 시 Q 클래스 생성 디렉토리 설정
tasks.withType(JavaCompile).configureEach {
	options.generatedSourceOutputDirectory = file(generatedDir)
	options.encoding = 'UTF-8'
}

// clean 시 생성된 Q 클래스 삭제
clean {
	delete file(generatedDir)
}
